zone change & transport cancellation due report changes

--- a/app/elements/app-list/app-list.html
+++ b/app/elements/app-list/app-list.html
@@ -376,6 +376,11 @@
               <transport-dashboard></transport-dashboard>
             </div>
           </section>
+           <section data-category="transport-cancellation-card">
+            <div class="col-md-12">
+              <transport-cancellation-card></transport-cancellation-card>
+            </div>
+          </section>
           </iron-pages>
           </div>
           </div>
