--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -321,3 +321,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="transporttodate-icon-pickercard/transporttodate-icon-pickercard.html">
 <link rel="import" href="transportdateofbirth-datepicker/transportdateofbirth-datepicker.html">
 <link rel="import" href="transport-cheque-datepicker/transport-cheque-datepicker.html">
+<link rel="import" href="zonechange-datepicker/zonechange-datepicker.html">
+<link rel="import" href="zonechangecollection-card/zonechangecollection-card.html">
+<link rel="import" href="transport-cancellation-card/transport-cancellation-card.html">
