--- a/app/elements/transportfee-installment-card/transportfee-installment-card.html
+++ b/app/elements/transportfee-installment-card/transportfee-installment-card.html
@@ -492,6 +492,7 @@
         // alert(JSON.stringify(installmentarr));
         document.querySelector('transportfee-card').FnSetfee(installmentarr);
         document.querySelector('zonetostudent-card').FnSetfee(installmentarr);
+        document.querySelector('zonechangecollection-card').FnSetfee(installmentarr);
         // installmentarr=[]; 
       },
       FnRefresh:function(){
