--- a/app/elements/cancel-enrollment-itemcard/cancel-enrollment-itemcard.html
+++ b/app/elements/cancel-enrollment-itemcard/cancel-enrollment-itemcard.html
@@ -39,7 +39,7 @@
             <paper-listbox class="dropdown-content" selected="{{cancelreason}}" id="reasonforcancel" attr-for-selected="value">
               <paper-item value="User error">User error</paper-item>
               <paper-item value="Duplicate">Duplicate</paper-item>
-              <paper-item value="Withdrawal">Withdrawal</paper-item>
+              <!-- <paper-item value="Withdrawal">Withdrawal</paper-item> -->
               <paper-item value="Discontinue">Discontinue</paper-item>
               <paper-item value="Transfer">Transfer</paper-item>
               <paper-item value="Absconding">Absconding</paper-item>
