--- a/app/elements/cancellation-service/cancellation-service.html
+++ b/app/elements/cancellation-service/cancellation-service.html
@@ -127,10 +127,9 @@
           document.querySelector('cancel-enrollment-card').FnRefresh();
           document.querySelector('cancel-enrollment-itemcard').FnRefresh(); 
           this.fetchinfofortcService();
-          // this.getadmittedcount();
-          // this.getcancelledcount();
-          // document.querySelector('cancel-enrollment-card').FnHideview(true,false);  
-          
+          this.getadmittedcount();
+          this.getcancelledcount();
+          // document.querySelector('cancel-enrollment-card').FnHideview(true,false); 
         }
       },
       fetchinfofortcService:function(){
