name update & tpt due report & session fix

--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -324,3 +324,4 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="zonechange-datepicker/zonechange-datepicker.html">
 <link rel="import" href="zonechangecollection-card/zonechangecollection-card.html">
 <link rel="import" href="transport-cancellation-card/transport-cancellation-card.html">
+<link rel="import" href="transport-feepaiddue-report/transport-feepaiddue-report.html">
