--- a/app/elements/login-service/login-service.html
+++ b/app/elements/login-service/login-service.html
@@ -103,7 +103,7 @@
         //alert(school+'   '+role+'    '+employeename+'    '+roleid);
         document.querySelector('CRM-app').setPage("applist");
         document.querySelector('app-list').setPage("enquiry","Enquiry");
-        document.querySelector('followup-service').gettotalfollowupcounttoday();
+        // document.querySelector('followup-service').gettotalfollowupcounttoday();
         document.querySelector('navigation-bar').FnSetRoleView(rolearr);
         }
       }     
