--- a/app/elements/app-list/app-list.html
+++ b/app/elements/app-list/app-list.html
@@ -381,6 +381,11 @@
               <transport-cancellation-card></transport-cancellation-card>
             </div>
           </section>
+          <section data-category="transport-feepaiddue-report">
+            <div class="col-md-12">
+              <transport-feepaiddue-report></transport-feepaiddue-report>
+            </div>
+          </section>
           </iron-pages>
           </div>
           </div>
